symbols remain in literal \<symbol> form. This avoids accidental loss of
Unicode content when saving the file.

* Bibtex database files (.bib) are semantically checked.

* Update to jedit-5.5.0, the latest release.


*** Isabelle/VSCode Prover IDE ***

* HTML preview of theories and other file-formats similar to
Isabelle/jEdit.


*** Document preparation ***

* Formal comments work uniformly in outer syntax, inner syntax (term
language), Isabelle/ML and some other embedded languages of Isabelle.
See also "Document comments" in the isar-ref manual. The following forms
are supported:

  - marginal text comment: \<comment> \<open>\<dots>\<close>
  - canceled source: \<^cancel>\<open>\<dots>\<close>
  - raw LaTeX: \<^latex>\<open>\<dots>\<close>

* Outside of the inner theory body, the default presentation context is
theory Pure. Thus elementary antiquotations may be used in markup
commands (e.g. 'chapter', 'section', 'text') and formal comments.

* System option "document_tags" specifies alternative command tags. This
is occasionally useful to control the global visibility of commands via
session options (e.g. in ROOT).

* Document markup commands ('section', 'text' etc.) are implicitly
tagged as "document" and visible by default. This avoids the application
of option "document_tags" to these commands.

* Isabelle names are mangled into LaTeX macro names to allow the full
identifier syntax with underscore, prime, digits. This is relevant for
antiquotations in control symbol notation, e.g. \<^const_name> becomes
\isactrlconstUNDERSCOREname.

* Document preparation with skip_proofs option now preserves the content
more accurately: only terminal proof steps ('by' etc.) are skipped.

* Document antiquotation @{theory name} requires the long
session-qualified theory name: this is what users reading the text
normally need to import.

* Document antiquotation @{session name} checks and prints the given
session name verbatim.
